test: simplify stream operations in PageWrapTest by using toList()